--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "docs:build": "vuepress build docs"
   },
   "devDependencies": {
-    "vuepress": "^0.14.10"
+    "vuepress": "^1.0.0-alpha.47"
   },
   "resolutions": {
     "webpack-dev-middleware": "3.6.0"
