--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
   },
-  "devDependencies": {
-    "vuepress": "^1.0.0-alpha.47"
-  },
-  "resolutions": {
-    "webpack-dev-middleware": "3.6.0"
+  "dependencies": {
+    "vuepress": "^1.0.2"
   }
 }
